* 2012-09-24 - thorben.betten@open-xchange.com

 - Fix for bug 23068: Fixed NPE on social/subscription refresh
 - Fix for bug 23080: Added "smarttagtype" to list of known HTML tags

* 2012-09-24 - marcus.klein@open-xchange.com

 - Fix for bug 22524: All CLTs now use the Java options defined for CLTs and not the options for the backend server.

* 2012-09-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 23067: More sophisticated checks for participant changes
 - Fix for bug 23048: Ensure appointments in public folders have at least one internal user as participant
 - Fix for bug 23077: Provide empty default alarms

* 2012-09-21 - thorben.betten@open-xchange.com

 - Fix for bug 23062: Check content of JSON object for non-null

* 2012-09-21 - marcus.klein@open-xchange.com

 - Fix for bug 23061: Added buddy classloading to bundle with JYaml library to solve crawler description object loading from YML files.
 - Fix for bug 22658: Complete path has been removed from the configuration file. Relative path are now used. Fixed a problem creating the
   path for new crawler descriptions.
 - Fix for bug 22198: Permissions of crawlers directory and path for crawler descriptions to write are now correct.
 - Fix for bug 22983: Restored redirecting functionality on autologin request for SAML integration.

* 2012-09-21 - tobias.friedrich@open-xchange.com

 - Fix for bug 22974: Exclude distribution lists from synchronization
 - Fix for bug 23058: Assume a status of 'COMPLETED' for tasks that are 100% completed implicitly

* 2012-09-21 - martin.herfurth@open-xchange.com

 - Fix for bug 23055: External Participant with different upper/lower case spelling are detected as party crasher.

* 2012-09-20 - marcus.klein@open-xchange.com

 - Fix for bug 22405: Extended build system to support arbitrary resources in bundles. Added fetcher.properties to bundle resources.

* 2012-09-20 - thorben.betten@open-xchange.com

 - Fix for bug 22980: No "hidden" mailbox expunge anymore