@@ -66,9 +66,9 @@ test -f $OXCONFIG && . $OXCONFIG
 
 ox_set_JAVA_BIN
 
-test -z "$JAVA_XTRAOPTS" && JAVA_XTRAOPTS="-Xms20M -Xmx280M"
+test -z "$JAVA_OXCMD_OPTS" && JAVA_OXCMD_OPTS="-Xms20M -Xmx280M"
 
-JAVA_OPTS="${JAVA_XTRAOPTS} \
+JAVA_OPTS="${JAVA_OXCMD_OPTS} \
 -Djava.awt.headless=true \
 -Dopenexchange.propdir=$PROPERTIESDIR"
 
